--- a/.github/workflows/simpleworkflow.yml
+++ b/.github/workflows/simpleworkflow.yml
@@ -5,11 +5,13 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
+  #push:
+  #  branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+  issues:
+    types: [opened]
+    
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
