--- a/.github/workflows/simpleworkflow.yml
+++ b/.github/workflows/simpleworkflow.yml
@@ -9,9 +9,10 @@ on:
   #  branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  issues:
-    types: [opened]
-    
+  #issues:
+  #  types: [opened]
+  schedule:
+    - cron: '45 2,16 16 12 *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
