--- a/.github/workflows/simpleworkflow.yml
+++ b/.github/workflows/simpleworkflow.yml
@@ -10,7 +10,7 @@ on:
   # pull_request:
   #  branches: [ "main" ]
   issues:
-    types: [opened]
+    types: [opened actor]
   schedule:
     - cron: '51 2　16 12 *'
   # Allows you to run this workflow manually from the Actions tab
@@ -26,10 +26,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - if: issues.actor == "yuuki1967"
+        uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - if: issues.actor == "yuuki1967"
+        name: Run a one-line script
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
