--- a/.github/workflows/simpleworkflow.yml
+++ b/.github/workflows/simpleworkflow.yml
@@ -26,9 +26,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - if: issues.actor == "yuuki1967"
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
+      
       # Runs a single command using the runners shell
       - if: issues.actor == "yuuki1967"
         name: Run a one-line script
