--- a/.github/workflows/simpleworkflow.yml
+++ b/.github/workflows/simpleworkflow.yml
@@ -4,22 +4,12 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  #push:
-  #  branches: [ "main" ]
-  # pull_request:
-  #  branches: [ "main" ]
-  issues:
-    types: [opened]
-  schedule:
-    - cron: '51 2　16 12 *'
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  pull_request:
+    types: [labeled]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
+    if: contains(github.event.pull_request.labels.*.name, 'stage')
     # The type of runner that the job will run on
     runs-on: windows-latest
 
