--- a/.github/workflows/simpleworkflow.yml
+++ b/.github/workflows/simpleworkflow.yml
@@ -19,8 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       
       # Runs a single command using the runners shell
-      - if: issues.actor == "yuuki1967"
-        name: Run a one-line script
+      - name: Run a one-line script
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
